# bot-project

./: pyproject.toml
app/: __init__.py
app/data/: __init__.py  films.json  handler.py
app/forms/: __init__.py  films.py
app/keyboards/: __init__.py  films.py
app/routes/: films.py
