[tool.poetry]
name = "first-bot-films"
version = "0.1.0"
description = "Telegram bot"
authors = ["qweArteom <kurylenko2artem@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
aiogram = "^3.10.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
